Refactor : 버전 차이로 get 메소드 변경